Added login button in main page

--- a/assets/index.html
+++ b/assets/index.html
@@ -79,14 +79,21 @@
         </div>
       </div>
 
-      <div class="group col-sm-2">
-        <label class="control-label">Help</label>
-        <div class="btn-group">
-          <a href="javascript:void(0)" id="button-help" class="btn btn-primary btn-raised dropdown-toggle" data-toggle="dropdown" >Help</a>
+        <div class="group col-sm-2">
+          <label class="control-label">Help</label>
+          <div class="btn-group">
+            <a href="javascript:void(0)" id="button-help" class="btn btn-primary btn-raised dropdown-toggle" data-toggle="dropdown" >Help</a>
+          </div>
         </div>
-      </div>
 
-      <div class="pull-right">
+        <div class="group col-sm-2">
+          <label class="control-label">Login</label>
+          <div class="btn-group">
+            <a href="login" id="button-login" class="btn btn-primary btn-raised dropdown-toggle">Login</a>
+          </div>
+        </div>
+
+        <div class="pull-right">
         <label class="control-label ">&nbsp;</label>
         <div class="row">
           <button class="btn btn-raised btn-primary" id="button-save">Submit<div class="ripple-container"></button>
